--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,49 @@
-# Make sure you're in your project's root directory
-cd /path/to/sunny-spot-swipe
-
-# Create the .gitignore file with the content
-cat > .gitignore << 'EOF'
+# Dependency directories
 node_modules/
 .expo/
 dist/
-npm-debug.*
+
+# Build outputs
+android/build/
+ios/build/
+web-build/
+*.apk
+*.aab
+*.ipa
+
+# Expo build artifacts
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
+
+# Development and debug files
+npm-debug.*
 .DS_Store
 .env
-android/build/
-ios/build/
-EOF
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-log.*
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+
+# IDE and editor folders
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Miscellaneous
+.expo/
+.gradletasknamecache
