Remove iOS folder as we're only targeting Android

--- a/eas.json
+++ b/eas.json
@@ -18,6 +18,13 @@
       "android": {
         "buildType": "app-bundle"
       }
+    },
+    "production-apk": {
+      "distribution": "store",
+      "android": {
+        "buildType": "apk"
+      },
+      "extends": "production"
     }
   }
 }
