--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-tab-view": "^4.0.6",
     "react-native-vector-icons": "^10.2.0"
   },
